[gd_scene load_steps=18 format=3 uid="uid://bk7rklt41thfd"]

[ext_resource type="Script" uid="uid://crx700gi0scwg" path="res://scenes/main/main.gd" id="1_hyk8p"]
[ext_resource type="Script" uid="uid://4qi8nq22sbyk" path="res://scenes/events/event_manager.gd" id="2_b1x3f"]
[ext_resource type="Script" uid="uid://dvg5o1r6lcdk1" path="res://scenes/music/music_manager.gd" id="2_iuonh"]
[ext_resource type="PackedScene" uid="uid://lm3epfr78djn" path="res://scenes/District/district.tscn" id="3_k2fmo"]
[ext_resource type="Script" uid="uid://c8r0muwy0kraw" path="res://scenes/events/event_screen.gd" id="4_6q06x"]
[ext_resource type="Texture2D" uid="uid://fa33sv7wsmjj" path="res://assets/icon.svg" id="4_l3cfh"]
[ext_resource type="Script" uid="uid://bnmy8nr103np7" path="res://resources/events/event_resource.gd" id="5_hujxm"]
[ext_resource type="Texture2D" uid="uid://3m8yv0tuy7wo" path="res://assets/sprites/1e_ebauchecarte.png" id="6_blune"]
[ext_resource type="Resource" uid="uid://c5bcsxc0tal8q" path="res://resources/events/event_test.tres" id="6_yyfjg"]
[ext_resource type="Script" uid="uid://c6olv104gjcfm" path="res://scenes/main/year_counter.gd" id="8_yyfjg"]
[ext_resource type="Texture2D" uid="uid://tmaj66ugmk57" path="res://assets/sprites/riviere_campagne.png" id="7_hxu8e"]
[ext_resource type="Texture2D" uid="uid://bt86ld0x4a3uq" path="res://assets/sprites/croixrousse.png" id="8_th5th"]
[ext_resource type="Texture2D" uid="uid://cr1wde06qd4tg" path="res://assets/icones/button choix.png" id="9_ouso4"]
[ext_resource type="Texture2D" uid="uid://dyrfohag10b07" path="res://scenes/main/defaite.png" id="11_ouso4"]
[ext_resource type="Script" uid="uid://d4devl1s68j4y" path="res://scenes/main/pandemic_ending_screen.gd" id="12_blune"]
[ext_resource type="Texture2D" uid="uid://5vr63k281d11" path="res://assets/sprites/guillotiere.png" id="9_raeie"]
[ext_resource type="Texture2D" uid="uid://8o1lfr6nnrhr" path="res://assets/sprites/Brotteaux.png" id="10_hxu8e"]
[ext_resource type="Texture2D" uid="uid://d7vgdntk84ui" path="res://assets/sprites/presquile.png" id="11_nvumn"]
[ext_resource type="Texture2D" uid="uid://dec1lg735bfo5" path="res://assets/icones/button choix selection.png" id="13_nvumn"]

[sub_resource type="Gradient" id="Gradient_k2fmo"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l3cfh"]
gradient = SubResource("Gradient_k2fmo")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_hyk8p"]
colors = PackedColorArray(0.4, 0.4, 0.4, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_iuonh"]
gradient = SubResource("Gradient_hyk8p")
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hyk8p"]
font_size = 60

[node name="Main" type="Node"]
script = ExtResource("1_hyk8p")

[node name="EventManager" type="Node" parent="."]
script = ExtResource("2_b1x3f")
initial_events = Array[ExtResource("5_hujxm")]([ExtResource("6_yyfjg")])

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("2_iuonh")
title_music = "uid://cdxkto4ejkq0e"
title_music_with_intro = "uid://deoboabn4u07g"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MusicManager"]

[node name="Environment" type="Node2D" parent="."]

[node name="BGSprite2D" type="Sprite2D" parent="Environment"]
position = Vector2(960, 540)
texture = ExtResource("6_blune")

[node name="RiverSprite2D" type="Sprite2D" parent="Environment"]
position = Vector2(960, 540)
texture = ExtResource("7_hxu8e")

[node name="District1" parent="Environment" instance=ExtResource("3_k2fmo")]
unique_name_in_owner = true
position = Vector2(175, 592)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ContentementOverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1032.0
offset_bottom = 243.0

[node name="ContentementProgressBar" type="ProgressBar" parent="CanvasLayer/ContentementOverlay"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 797.0
offset_top = 108.0
offset_right = 964.0
offset_bottom = 136.0
value = 50.0
show_percentage = false

[node name="ContentementLabel" type="Label" parent="CanvasLayer/ContentementOverlay/ContentementProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -11.5
offset_right = 56.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Contentement"

[node name="TimeOverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 266.0
offset_top = 2.0
offset_right = 1031.0
offset_bottom = 252.0
mouse_filter = 2

[node name="TimeTextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/TimeOverlay"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 17.0
offset_bottom = 78.0
grow_horizontal = 2
value = 10.0
nine_patch_stretch = true
texture_under = ExtResource("13_nvumn")
texture_progress = ExtResource("13_nvumn")
tint_under = Color(0.32, 0.32, 0.32, 1)

[node name="TimeTextureRect" type="TextureRect" parent="CanvasLayer/TimeOverlay/TimeTextureProgressBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 55.0
offset_right = 34.0
offset_bottom = 85.0
texture = ExtResource("4_l3cfh")
expand_mode = 1
stretch_mode = 4

[node name="YearCounter" type="Label" parent="CanvasLayer/TimeOverlay/TimeTextureProgressBar/TimeTextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -5.0
offset_top = 25.0
offset_right = 35.0
offset_bottom = 48.0
text = "1800"

[node name="EventScreen" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_6q06x")
events = Array[ExtResource("5_hujxm")]([ExtResource("6_yyfjg")])

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/EventScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -569.0
offset_top = -281.0
offset_right = 569.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_l3cfh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EventScreen/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer"]
layout_mode = 2

[node name="EventTitleLabel" type="Label" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TITRE"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventDescriptionLabel" type="Label" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "C'est la description de l'évènement"

[node name="EventTextureRect" type="TextureRect" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_l3cfh")
stretch_mode = 5

[node name="EventChoiceButton1" type="Button" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ouso4")
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 60

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton1/NinePatchRect"]
layout_mode = 0
offset_right = 1098.0
offset_bottom = 81.0
theme_override_constants/margin_left = 40

[node name="EventChoice1Label" type="Label" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton1/NinePatchRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Premier choix (effet)"

[node name="EventChoiceButton2" type="Button" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_ouso4")
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 60

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton2/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50

[node name="EventChoice2Label" type="Label" parent="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton2/NinePatchRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Deuxième choix (effet)"

[node name="TitleScreen" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_iuonh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -742.0
offset_top = -455.0
offset_right = 742.0
offset_bottom = 455.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TitleScreen/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/TitleScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "TITRE DU JEU"
label_settings = SubResource("LabelSettings_hyk8p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/TitleScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Nouvelle partie"

[node name="Credits" type="Control" parent="CanvasLayer/TitleScreen"]
anchors_preset = 0
offset_right = 538.0
offset_bottom = 517.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/TitleScreen/Credits"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="CanvasLayer/TitleScreen/Credits/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="CreditsLabel" type="Label" parent="CanvasLayer/TitleScreen/Credits/VBoxContainer"]
layout_mode = 2
text = "Professeure : Laetitia
Game design : Wilson
Artistes : Anne-Laure, Julie
Sound design : Sebastien
Développement : Charlie, Ghislain"

[node name="YearCounter" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("8_yyfjg")

[node name="GameOver" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PandemicEndingScreen" type="TextureRect" parent="CanvasLayer/GameOver"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_ouso4")
script = ExtResource("12_blune")

[connection signal="finished" from="MusicManager/AudioStreamPlayer" to="MusicManager" method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton1" to="CanvasLayer/EventScreen" method="_on_event_choice_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/EventScreen/TextureRect/MarginContainer/VBoxContainer/EventChoiceButton2" to="CanvasLayer/EventScreen" method="_on_event_choice_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/TitleScreen/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]

[editable path="Environment/District1"]
[editable path="Environment/District2"]
[editable path="Environment/District3"]
[editable path="Environment/District4"]
